# pulsegate

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  dataset.md  decisions.md  design-notes.md  diagrams.md
eval/: baseline_v0.json
infra/grafana/dashboards/: pulsegate.json
infra/grafana/provisioning/dashboards/: default.yml
infra/prometheus/: prometheus.yml
scripts/: download_data.py  eval_baseline.py  inspect_record.py  run_consumer.py  run_producer.py  run_stream_monitor.py  train_baseline.py
src/pulsegate_core/: __init__.py  features.py  io.py  labels.py  pipeline.py  temporal.py  windowing.py
src/pulsegate_core/streaming/: __init__.py  consumer.py  metrics.py  monitor.py  producer.py
tests/: conftest.py  test_consumer.py  test_features.py  test_io.py  test_labels.py  test_metrics.py  test_pipeline.py  test_producer.py  test_temporal.py  test_windowing.py
