[project]
name = "pulsegate"
version = "0.1.0"
description = "Real-time biosignal classification platform — streaming infra, golden-dataset eval, multi-connector orchestration."
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "wfdb>=4.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulsegate_core"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
